add to projeeeect

--- a/index.html
+++ b/index.html
@@ -53,11 +53,29 @@
             <p class="p">این سال ما از ساخت و سازهای پیچیده بیشتر از گذشته استفاده می کنیم</p>
           </div> 
          </div>
-         
+    
     </section>
 
   </header>
+<section class="section1">
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-md-6">
+                <img src="./fd275e7c37ad4da5a29f8e7a565dff15.w_300,h_300,r_k.jpg" class="img-fulid" alt="#">
+                <a class="nav-link" href="#" target="blank">خانه خود را بسازید</a>
+                <p>در راه کار خود چه چیزی را پشت سر می گذارید؟ معماری در همه جا در زندگی روزمره وجود دارد.</p>
+            </div>
+            <div class="col-md-6">
+                <img src="./7d7daa6e50b74a27b2a9bdc9800c6dce.w_300,h_300,r_k.jpg" class="img-fulid" alt="#">
+                <a class="nav-link" href="#" target="blank">ایجاد معماری خیره کننده</a>
+                <p>به طور معمول ، معماران به شدت به جنبه هایی مانند فضا ، زمان ، پول و محدودیت های دیگر وابسته هستند.</p>
 
+
+            </div>
+        </div>
+    </div>
+
+</section>
 
 
 
