--- a/index.html
+++ b/index.html
@@ -59,22 +59,25 @@
   </header>
 <section class="section1">
     <div class="container">
-        <div class="row text-center">
-            <div class="col-md-6">
+        <div class="row text-start">
+            <div class="col-md-3 img">
                 <img src="./fd275e7c37ad4da5a29f8e7a565dff15.w_300,h_300,r_k.jpg" class="img-fulid" alt="#">
-                <a class="nav-link" href="#" target="blank">خانه خود را بسازید</a>
-                <p>در راه کار خود چه چیزی را پشت سر می گذارید؟ معماری در همه جا در زندگی روزمره وجود دارد.</p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
+                <a class="nav-link text-dark  fs-4" href="#" target="blank">خانه خود را بسازید</a>
+                <p class="text-muted">در راه کار خود چه چیزی را پشت سر می<br> گذارید؟ معماری در همه جا در زندگی <br>روزمره وجود دارد.</p>
+            </div>
+            <div class="col-md-3 img">
                 <img src="./7d7daa6e50b74a27b2a9bdc9800c6dce.w_300,h_300,r_k.jpg" class="img-fulid" alt="#">
-                <a class="nav-link" href="#" target="blank">ایجاد معماری خیره کننده</a>
-                <p>به طور معمول ، معماران به شدت به جنبه هایی مانند فضا ، زمان ، پول و محدودیت های دیگر وابسته هستند.</p>
-
-
-            </div>
+               </div>
+                <div class="col-md-3">   
+                
+                    <a class="nav-link text-dark fs-4" href="#" target="blank">ایجاد معماری خیره کننده</a>
+                <p class="text-muted">به طور معمول ، معماران به شدت به جنبه <br>هایی مانند فضا ، زمان ، پول و محدودیت <br>های دیگر وابسته هستند.</p>
+                </div>
         </div>
     </div>
-
+ <div class="row"></div>
 </section>
 
 
