--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.rtl.min.css" integrity="sha384-beJoAY4VI2Q+5IPXjI207/ntOuaz06QYCdpWfWRv4lSFDyUSqsM0W+wiAMr2I185" crossorigin="anonymous">
     <link href='https://css.gg/loadbar.css' rel='stylesheet'>
     <link href='https://css.gg/border-style-solid.css' rel='stylesheet'>
+    <link rel="stylesheet" href="./responsive.css">
 </head>
 <body dir="rtl">
     <header>
@@ -21,18 +22,18 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 m-auto">
-              <li class="nav-item mx-3">
+              <li class="nav-item mx-md-3">
                 <a class="nav-link active text-primary data" aria-current="page" href="#"><i class="gg-border-style-solid " ></i>صفحه ی نخست</a>
               </li>
-              <li class="nav-item mx-3">
+              <li class="nav-item mx-md-3">
                 <a class="nav-link dad" href="#"><i class="gg-loadbar"></i>درباره ما</a>
               </li>
             </li>
-            <li class="nav-item mx-3">
+            <li class="nav-item mx-md-3">
               <a class="nav-link dad" href="#"> <i class="gg-loadbar"></i>گالری</a>
             </li>
         </li>
-        <li class="nav-item mx-3">
+        <li class="nav-item mx-md-3">
           <a class="nav-link dad" href="#"> <i class="gg-loadbar"></i>ارتباط با ما</a>
         </li>
             </ul>
@@ -58,7 +59,7 @@
 
   </header>
 <section class="section1">
-    <div class="container">
+    <div class="container-1" style=" height: 346px">
         <div class="row text-start">
             <div class="col-md-3 img">
                 <img src="./fd275e7c37ad4da5a29f8e7a565dff15.w_300,h_300,r_k.jpg" class="img-fulid" alt="#">
@@ -77,7 +78,32 @@
                 </div>
         </div>
     </div>
- <div class="row"></div>
+ <div class="row text-center">
+     <div class="col-md-6 bg">
+         <div class="parge">
+        <img src="./94298219e4714fa6af2c2d296badf6dc.w_20,h_20,r_k.png" class="img-fluid" alt="#">
+         <h2>خدمات ما</h2>
+         <p>مدلسازی اطلاعات ساختمان</p>
+         <p>اغلب اوقات ماهیت بدنی و عملکردی هر پروژه ساختمانی باید به<br> صورت دیجیتالی ارائه شود.</p>
+         </div>
+         <div class="parge">
+             <img src="./86149ca277f54fb2aa732d5417795a02.w_20,h_20,r_k.png" class="img-fluid" alt="#">
+             <h2>خدمات ساختمانی</h2>
+             <p>مشتریان ما عاشق سرعت / کیفیتی هستند که در طی هر یک از<br>  مراحل اصلی ساخت و ساز نشان می دهیم!</p>
+         </div>
+         <div class="parge">
+            <img src="./62e65326587847228f0a131ba16394aa.w_25,h_25,r_k.png" class="img-fluid" alt="#">
+            <h2>خدمات قبل از ساخت</h2>
+            <p>ما قبل از شروع هرگونه ساخت و ساز ، وقت خود را در برنامه ریزی <br> اولیه می گذاریم تا تمام مالی و کارایی را به تعادل برساند.</p>
+        </div>
+        <div class="parge">
+            <img src="./90c2209b35514de58f51b698e909f3d8.w_25,h_20,r_k.png" class="img-fluid" alt="#">
+            <h2>مدیریت ساخت و ساز</h2>
+            <p>مدیریت پروژه ساخت و ساز ضروری است. ما برای این کار بیشترین <br> زمان و تکرار چرخه های زندگی را داریم.</p>
+        </div>
+     </div>
+     <div class="col-md-6"></div>
+ </div>
 </section>
 
 
