add too project

--- a/index.html
+++ b/index.html
@@ -78,32 +78,70 @@
                 </div>
         </div>
     </div>
- <div class="row text-center">
+ <div class="row">
      <div class="col-md-6 bg">
          <div class="parge">
+         <h2 class="m-5 text-start">خدمات ما</h2>
         <img src="./94298219e4714fa6af2c2d296badf6dc.w_20,h_20,r_k.png" class="img-fluid" alt="#">
-         <h2>خدمات ما</h2>
-         <p>مدلسازی اطلاعات ساختمان</p>
-         <p>اغلب اوقات ماهیت بدنی و عملکردی هر پروژه ساختمانی باید به<br> صورت دیجیتالی ارائه شود.</p>
+         <p class="fs-6 fw-bold mb-4">مدلسازی اطلاعات ساختمان</p>
+         <p class="fs-6 ">اغلب اوقات ماهیت بدنی و عملکردی هر پروژه ساختمانی باید به<br> صورت دیجیتالی ارائه شود.</p>
          </div>
          <div class="parge">
              <img src="./86149ca277f54fb2aa732d5417795a02.w_20,h_20,r_k.png" class="img-fluid" alt="#">
-             <h2>خدمات ساختمانی</h2>
-             <p>مشتریان ما عاشق سرعت / کیفیتی هستند که در طی هر یک از<br>  مراحل اصلی ساخت و ساز نشان می دهیم!</p>
+             <h2 class="fs-6 fw-bold mb-4" >خدمات ساختمانی</h2>
+             <p class="fs-6">مشتریان ما عاشق سرعت / کیفیتی هستند که در طی هر یک از<br>  مراحل اصلی ساخت و ساز نشان می دهیم!</p>
          </div>
          <div class="parge">
             <img src="./62e65326587847228f0a131ba16394aa.w_25,h_25,r_k.png" class="img-fluid" alt="#">
-            <h2>خدمات قبل از ساخت</h2>
-            <p>ما قبل از شروع هرگونه ساخت و ساز ، وقت خود را در برنامه ریزی <br> اولیه می گذاریم تا تمام مالی و کارایی را به تعادل برساند.</p>
+            <h2 class="fs-6 fw-bold mb-4">خدمات قبل از ساخت</h2>
+            <p class="fs-6">ما قبل از شروع هرگونه ساخت و ساز ، وقت خود را در برنامه ریزی <br> اولیه می گذاریم تا تمام مالی و کارایی را به تعادل برساند.</p>
         </div>
         <div class="parge">
             <img src="./90c2209b35514de58f51b698e909f3d8.w_25,h_20,r_k.png" class="img-fluid" alt="#">
-            <h2>مدیریت ساخت و ساز</h2>
-            <p>مدیریت پروژه ساخت و ساز ضروری است. ما برای این کار بیشترین <br> زمان و تکرار چرخه های زندگی را داریم.</p>
+            <h2 class="fs-6 fw-bold mb-4">مدیریت ساخت و ساز</h2>
+            <p class="fs-6">مدیریت پروژه ساخت و ساز ضروری است. ما برای این کار بیشترین <br> زمان و تکرار چرخه های زندگی را داریم.</p>
         </div>
      </div>
-     <div class="col-md-6"></div>
+     <div class="col-md-6">
+         <div class="row">
+             <div class="col-md-3 offset-md-2 ">
+                 <img src="./a4c72e9c3ec04e25955f09cc1ca9a614.w_170,h_170,r_k.jpg"  class="img-fluid mb-md-5" alt="#">
+             </div>
+             <div class="col-md-4">
+                 <a class="nav-link head" href="#">تجاری</a>
+                 <P class="lh-lg">این احتمالاً متنوع ترین رده ساختمانی است که می توان در آن کار کرد. اما ما ...</P>
+             </div>
+         </div>
+         <div class="row">
+            <div class="col-md-3 offset-md-2">
+                <img src="./3d4812d0f654444fba00224d232a9c25.w_170,h_170,r_k.jpg"  class="img-fluid mb-md-5" alt="#">
+            </div>
+            <div class="col-md-4">
+                 <a class="nav-link head" href="#">فرهنگی/مادام العمر</a>
+                <P class="lh-lg">کار بر روی یک ساختمان مهم اجتماعی ، مانند یک پارک ، شامل موارد ...</P>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3 offset-md-2">
+                <img src="./a36162a80bbb41e9aa9a460f01328c6a.w_170,h_170,r_k.jpg"  class="img-fluid mb-md-5" alt="#">
+            </div>
+            <div class="col-md-4">
+                <a class="nav-link head" href="#">داده ها /فن اوری</a>
+                <p class="lh-lg">در حالی که ساخت یک ساختمان چهارم برای یک شرکت فناوری اطلاعات نسبتاً آسان است ...</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3 offset-md-2">
+                <img src="./6c6521961f8243758c72dad7ee34abe7.w_170,h_170,r_k.jpg"  class="img-fluid mb-md-5" alt="#">
+            </div>
+            <div class="col-md-4">
+                <a class="nav-link head" href="#">اموزشی</a>
+                <p class="lh-lg">موسسات آموزشی می توانند بسیار خلاق تر از مدرسه معمولی شما باشند ...</p>
+            </div>
+        </div>
+     </div>
  </div>
+ 
 </section>
 
 
