--- a/index.html
+++ b/index.html
@@ -141,7 +141,28 @@
         </div>
      </div>
  </div>
- 
+ <div class="container">
+     <div class="row align-items-end mt">
+         <div class="offset-md-1 col-md-5 ">
+             <h3>عنوان پروژه شما</h3>
+             <p>توضیحاتی درباره‌ی پروژه شما. شما می‌توانید با دابل کلیک روی این<br> قسمت متن مورد نظر خودتان را وارد کنید...</p>
+         </div>
+         <div class="col-md-6">
+             <img src="./9f96c4a4c81c445bb6e45d9917bc053c.w_630,h_530,r_k.jpg" class="img-fluid" alt="#">
+         </div>
+     </div>
+ </div>
+ <div class="container">
+    <div class="row align-items-end mt-md-5">
+        <div class="col-md-6">
+            <img src="./e960b1beca7c49ffbc83105702147e2e.w_630,h_530,r_k.jpg" class="img-fluid" alt="#">
+        </div>
+        <div class=" col-md-5 ">
+            <h3>عنوان پروژه شما</h3>
+            <p>توضیحاتی درباره‌ی پروژه شما. شما می‌توانید با دابل کلیک روی این<br> قسمت متن مورد نظر خودتان را وارد کنید...</p>
+        </div>
+    </div>
+</div>
 </section>
 
 
