--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <img src="./e960b1beca7c49ffbc83105702147e2e.w_630,h_530,r_k.jpg" class="img-fluid" alt="#">
         </div>
         <div class=" col-md-5 ">
-            <h3>عنوان پروژه شما</h3>
+            <h3>عنوان شما</h3>
             <p>توضیحاتی درباره‌ی پروژه شما. شما می‌توانید با دابل کلیک روی این<br> قسمت متن مورد نظر خودتان را وارد کنید...</p>
         </div>
     </div>
