--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fa-IR">
+<html lang="fa-IR ">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.rtl.min.css" integrity="sha384-beJoAY4VI2Q+5IPXjI207/ntOuaz06QYCdpWfWRv4lSFDyUSqsM0W+wiAMr2I185" crossorigin="anonymous">
     <link href='https://css.gg/loadbar.css' rel='stylesheet'>
     <link href='https://css.gg/border-style-solid.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./responsive.css">
 </head>
 <body dir="rtl">
@@ -158,12 +159,64 @@
             <img src="./e960b1beca7c49ffbc83105702147e2e.w_630,h_530,r_k.jpg" class="img-fluid" alt="#">
         </div>
         <div class=" col-md-5 ">
-            <h3>عنوان شما</h3>
+            <h3>عنوان پروژه شما</h3>
             <p>توضیحاتی درباره‌ی پروژه شما. شما می‌توانید با دابل کلیک روی این<br> قسمت متن مورد نظر خودتان را وارد کنید...</p>
         </div>
     </div>
-</div>
-</section>
+ </div>
+ </section>
+      <section  class="bg-primary pb-md-5">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-6 pt-5">
+                 <div class="col-md" >
+                     <h2 class=" fs fw-bold p-md-3 text-white">با ما در ارتباط باشید</h2> </div>
+                   <div class="offset-md-2 col-md-6">
+                       <p class=" mb-2 bg-info text-white">از مشاوره رایگان با کارشناسان ما استفاده کنید!</p> </div>
+                  <div class=" offset-md-2 col-md-4 text-center bg-white pt-md-4 ">
+                    <i class="bi bi-facebook fs-1"></i>
+                    <i class="bi bi-instagram fs-1 m-md-3"></i>
+                    <i class="bi bi-twitter fs-1"></i>
+                 </div>
+                </div>
+             </div>
+        </div>
+    </section>
+    <footer>
+            <div class="container">
+                <div class="row pt-md-5">
+                    <div class="col-md-3">
+                        <p class="fs-3 fw-bold">تماس با ما </p>
+                        <p class="fs-sm text-white-50 lh font">آدرس دفتر شما...<br> نام شهر، نام منطقه، نام خیابان، پلاک شما <br>تلفن : شماره تلفن خودتان را وارد کنید... <br> پشتیبانی: info@yourdomain.ir​​​​​​​ <br>فروش: sales@yourdomain.ir</p>
+                    </div>
+                    <div class="col-md-3">
+                        <p class="ms-md-3 fs-4 fw-bold">لیست خدمات</p>
+                        <a class="nav-link text-white-50 lh font" href="#" >طراحی داخلی<br> معماری<br> طراحی اتاق خواب  <br>فضای داخلی حمام<br> اتاق تشیمن<br> فضای داخلی آشپزخانه</a>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="mb-3 ">
+                            <input type="text" class="form-control text-white" id="exampleFormControlInput1" placeholder="نام *">
+                            </div>
+                            <div class="mb-3">
+                            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="پست الکترونیک *">
+                            </div>
+                            <div class="mb-3">
+                            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="موضوع">
+                            </div>
+                            <div class="mb-3">
+                            <textarea class="form-control " id="exampleFormControlTextarea1" rows="3">پیام *</textarea>
+                            </div>
+                            <a class="btn btn-outline-info" href="#" role="button">ارسال</a>
+                          </div>
+    
+                    <div class="col-md-3">
+                        <p class="fs-3 fw-bold">مارا دونبال کنید</p>
+                        <a class="nav-link text-white-50 lh font" href="#" >تلگرام<br> واتس اپ <br>اینستاگرام<br> فیسبوک</a>
+                    </div>
+                </div>
+            </div>
+           
+    </footer>
 
 
 
