--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
      </div>
  </div>
  <div class="container">
-    <div class="row align-items-end mt-md-5">
+    <div class="row align-items-end m-md-5">
         <div class="col-md-6">
             <img src="./e960b1beca7c49ffbc83105702147e2e.w_630,h_530,r_k.jpg" class="img-fluid" alt="#">
         </div>
@@ -165,10 +165,10 @@
     </div>
  </div>
  </section>
-      <section  class="bg-primary pb-md-5">
+      <section  class="bg-primary pbb">
         <div class="container">
             <div class="row text-center">
-                <div class="col-md-6 pt-5">
+                <div class="col-md-6 pt-md-5">
                  <div class="col-md" >
                      <h2 class=" fs fw-bold p-md-3 text-white">با ما در ارتباط باشید</h2> </div>
                    <div class="offset-md-2 col-md-6">
@@ -179,13 +179,16 @@
                     <i class="bi bi-twitter fs-1"></i>
                  </div>
                 </div>
+                <div class="col-md-6 position-relative dark">
+                    <img src="./66833edb00964632bdf159d5e608d725.w_640,h_640,r_k.png" class="img-fluid" alt="#">
+                </div>
              </div>
         </div>
     </section>
     <footer>
             <div class="container">
-                <div class="row pt-md-5">
-                    <div class="col-md-3">
+                <div class="row pttp mb-md-5">
+                    <div class="col-md-3 ">
                         <p class="fs-3 fw-bold">تماس با ما </p>
                         <p class="fs-sm text-white-50 lh font">آدرس دفتر شما...<br> نام شهر، نام منطقه، نام خیابان، پلاک شما <br>تلفن : شماره تلفن خودتان را وارد کنید... <br> پشتیبانی: info@yourdomain.ir​​​​​​​ <br>فروش: sales@yourdomain.ir</p>
                     </div>
