--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body dir="rtl">
     <header>
-     <nav class="navbar navbar-expand-lg navbar-light bg-white p-5">
+     <nav class="navbar navbar-expand-lg navbar-light bg-white p-5 fixed-top">
         <div class="container">
           <a class="navbar-brand text-primary" href="#">trahiweb</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,23 +24,23 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 m-auto">
               <li class="nav-item mx-md-3">
-                <a class="nav-link active text-primary data" aria-current="page" href="#"><i class="gg-border-style-solid " ></i>صفحه ی نخست</a>
+                <a class="nav-link active text-primary data dad" aria-current="page" href="#">  صفحه ی نخست</a>
               </li>
               <li class="nav-item mx-md-3">
-                <a class="nav-link dad" href="#"><i class="gg-loadbar"></i>درباره ما</a>
+              <a class="nav-link dad" href="#">     درباره ما</a>
               </li>
             </li>
             <li class="nav-item mx-md-3">
-              <a class="nav-link dad" href="#"> <i class="gg-loadbar"></i>گالری</a>
+              <a class="nav-link dad" href="#"> گالری </a>
             </li>
         </li>
         <li class="nav-item mx-md-3">
-          <a class="nav-link dad" href="#"> <i class="gg-loadbar"></i>ارتباط با ما</a>
+          <a class="nav-link dad" href="#">  ارتباط با ما</a>
         </li>
             </ul>
-            <form class="d-flex">
-              <input class="form-control ps-5" type="search" placeholder="جستجو در سایت" aria-label="Search">
-              <button class="btn btn-primary ps-3" type="submit">جستجو</button>
+            <form class="d-md-flex ">
+              <input class="form-control fs-6 ps-5" type="search" placeholder=" جستجو در سایت ..." aria-label="Search">
+              <button class="btn btn-primary  fs-6 ps-3" type="submit">جستجو</button>
             </form>
           </div>
         </div>
@@ -105,7 +105,7 @@
      </div>
      <div class="col-md-6">
          <div class="row">
-             <div class="col-md-3 offset-md-2 ">
+             <div class="col-md-3 offset-md-2  main">
                  <img src="./a4c72e9c3ec04e25955f09cc1ca9a614.w_170,h_170,r_k.jpg"  class="img-fluid mb-md-5" alt="#">
              </div>
              <div class="col-md-4">
@@ -114,7 +114,7 @@
              </div>
          </div>
          <div class="row">
-            <div class="col-md-3 offset-md-2">
+            <div class="col-md-3 offset-md-2 main">
                 <img src="./3d4812d0f654444fba00224d232a9c25.w_170,h_170,r_k.jpg"  class="img-fluid mb-md-5" alt="#">
             </div>
             <div class="col-md-4">
@@ -123,7 +123,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 offset-md-2">
+            <div class="col-md-3 offset-md-2 main">
                 <img src="./a36162a80bbb41e9aa9a460f01328c6a.w_170,h_170,r_k.jpg"  class="img-fluid mb-md-5" alt="#">
             </div>
             <div class="col-md-4">
@@ -132,7 +132,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 offset-md-2">
+            <div class="col-md-3 offset-md-2 main">
                 <img src="./6c6521961f8243758c72dad7ee34abe7.w_170,h_170,r_k.jpg"  class="img-fluid mb-md-5" alt="#">
             </div>
             <div class="col-md-4">
@@ -170,7 +170,7 @@
             <div class="row text-center">
                 <div class="col-md-6 pt-md-5">
                  <div class="col-md" >
-                     <h2 class=" fs fw-bold p-md-3 text-white">با ما در ارتباط باشید</h2> </div>
+                     <h2 class=" fs fw-bold p-3 text-white">با ما در ارتباط باشید</h2> </div>
                    <div class="offset-md-2 col-md-6">
                        <p class=" mb-2 bg-info text-white">از مشاوره رایگان با کارشناسان ما استفاده کنید!</p> </div>
                   <div class=" offset-md-2 col-md-4 text-center bg-white pt-md-4 ">
@@ -179,7 +179,7 @@
                     <i class="bi bi-twitter fs-1"></i>
                  </div>
                 </div>
-                <div class="col-md-6 position-relative dark">
+                <div class="col-md-6 position-relative dark dan">
                     <img src="./66833edb00964632bdf159d5e608d725.w_640,h_640,r_k.png" class="img-fluid" alt="#">
                 </div>
              </div>
@@ -207,7 +207,7 @@
                             <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="موضوع">
                             </div>
                             <div class="mb-3">
-                            <textarea class="form-control " id="exampleFormControlTextarea1" rows="3">پیام *</textarea>
+                            <textarea class="form-control " id="exampleFormControlTextarea1" rows="3" placeholder="پیام *"></textarea>
                             </div>
                             <a class="btn btn-outline-info" href="#" role="button">ارسال</a>
                           </div>
