--- a/html/index.html
+++ b/html/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>قالب </title>
-    <link rel="stylesheet" href="../myproject/assets/css/reset.css">
-    <link rel="stylesheet" href="../myproject/assets/css/style.css">
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.rtl.min.css" integrity="sha384-beJoAY4VI2Q+5IPXjI207/ntOuaz06QYCdpWfWRv4lSFDyUSqsM0W+wiAMr2I185" crossorigin="anonymous">
     <link href='https://css.gg/loadbar.css' rel='stylesheet'>
     <link href='https://css.gg/border-style-solid.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../myproject/assets/css/responsive.css">
+    <link rel="stylesheet" href="./responsive.css">
 </head>
 <body dir="rtl">
     <header>
@@ -48,7 +48,7 @@
     <section>
         <div class="active">
             <div>
-                <img src="../myproject/assets/img/akbari.jpg" class="img-fluid" alt="#"  >
+                <img src="./akbari.jpg" class="img-fluid" alt="#"  >
             </div>
            <div class="h-1">
             <h1 class="fw-bold lh-lg">عنوان خدمت اصلی</h1>
@@ -63,14 +63,14 @@
     <div class="container-1" style=" height: 346px">
         <div class="row text-start">
             <div class="col-md-3 img">
-                <img src="../myproject/assets/img/fd275e7c37ad4da5a29f8e7a565dff15.w_300,h_300,r_k.jpg" class="img-fulid shadow mb-5 bg-body rounded" alt="#">
+                <img src="./fd275e7c37ad4da5a29f8e7a565dff15.w_300,h_300,r_k.jpg" class="img-fulid shadow mb-5 bg-body rounded" alt="#">
             </div>
             <div class="col-md-3">
                 <a class="nav-link text-dark  fs-4" href="#" target="blank">خانه خود را بسازید</a>
                 <p class="text-muted">در راه کار خود چه چیزی را پشت سر می<br> گذارید؟ معماری در همه جا در زندگی <br>روزمره وجود دارد.</p>
             </div>
             <div class="col-md-3 img">
-                <img src="../myproject/assets/img/7d7daa6e50b74a27b2a9bdc9800c6dce.w_300,h_300,r_k.jpg" class="img-fulid shadow mb-5 bg-body rounded" alt="#">
+                <img src="./7d7daa6e50b74a27b2a9bdc9800c6dce.w_300,h_300,r_k.jpg" class="img-fulid shadow mb-5 bg-body rounded" alt="#">
                </div>
                 <div class="col-md-3">   
                 
@@ -83,22 +83,22 @@
      <div class="col-md-6 bg">
          <div class="parge">
          <h2 class="m-5 text-start">خدمات ما</h2>
-        <img src="../myproject/assets/img/94298219e4714fa6af2c2d296badf6dc.w_20,h_20,r_k.png" class="img-fluid" alt="#">
+        <img src="./94298219e4714fa6af2c2d296badf6dc.w_20,h_20,r_k.png" class="img-fluid" alt="#">
          <p class="fs-6 fw-bold mb-4">مدلسازی اطلاعات ساختمان</p>
          <p class="fs-6 ">اغلب اوقات ماهیت بدنی و عملکردی هر پروژه ساختمانی باید به<br> صورت دیجیتالی ارائه شود.</p>
          </div>
          <div class="parge">
-             <img src="../myproject/assets/img/86149ca277f54fb2aa732d5417795a02.w_20,h_20,r_k.png" class="img-fluid" alt="#">
+             <img src="./86149ca277f54fb2aa732d5417795a02.w_20,h_20,r_k.png" class="img-fluid" alt="#">
              <h2 class="fs-6 fw-bold mb-4" >خدمات ساختمانی</h2>
              <p class="fs-6">مشتریان ما عاشق سرعت / کیفیتی هستند که در طی هر یک از<br>  مراحل اصلی ساخت و ساز نشان می دهیم!</p>
          </div>
          <div class="parge">
-            <img src="../myproject/assets/img/62e65326587847228f0a131ba16394aa.w_25,h_25,r_k.png" class="img-fluid" alt="#">
+            <img src="./62e65326587847228f0a131ba16394aa.w_25,h_25,r_k.png" class="img-fluid" alt="#">
             <h2 class="fs-6 fw-bold mb-4">خدمات قبل از ساخت</h2>
             <p class="fs-6">ما قبل از شروع هرگونه ساخت و ساز ، وقت خود را در برنامه ریزی <br> اولیه می گذاریم تا تمام مالی و کارایی را به تعادل برساند.</p>
         </div>
         <div class="parge">
-            <img src="../myproject/assets/img/90c2209b35514de58f51b698e909f3d8.w_25,h_20,r_k.png" class="img-fluid" alt="#">
+            <img src="./90c2209b35514de58f51b698e909f3d8.w_25,h_20,r_k.png" class="img-fluid" alt="#">
             <h2 class="fs-6 fw-bold mb-4">مدیریت ساخت و ساز</h2>
             <p class="fs-6">مدیریت پروژه ساخت و ساز ضروری است. ما برای این کار بیشترین <br> زمان و تکرار چرخه های زندگی را داریم.</p>
         </div>
@@ -106,7 +106,7 @@
      <div class="col-md-6">
          <div class="row">
              <div class="col-md-3 offset-md-2  main">
-                 <img src="../myproject/assets/img/a4c72e9c3ec04e25955f09cc1ca9a614.w_170,h_170,r_k.jpg"  class="img-fluid mb-md-5 shadow mb-5 bg-body rounded" alt="#">
+                 <img src="./a4c72e9c3ec04e25955f09cc1ca9a614.w_170,h_170,r_k.jpg"  class="img-fluid mb-md-5 shadow mb-5 bg-body rounded" alt="#">
              </div>
              <div class="col-md-4">
                  <a class="nav-link head" href="#">تجاری</a>
@@ -115,7 +115,7 @@
          </div>
          <div class="row">
             <div class="col-md-3 offset-md-2 main">
-                <img src="../myproject/assets/img/3d4812d0f654444fba00224d232a9c25.w_170,h_170,r_k.jpg"  class="img-fluid mb-md-5 shadow  mb-5 bg-body rounded" alt="#">
+                <img src="./3d4812d0f654444fba00224d232a9c25.w_170,h_170,r_k.jpg"  class="img-fluid mb-md-5 shadow  mb-5 bg-body rounded" alt="#">
             </div>
             <div class="col-md-4">
                  <a class="nav-link head" href="#">فرهنگی/مادام العمر</a>
@@ -124,7 +124,7 @@
         </div>
         <div class="row">
             <div class="col-md-3 offset-md-2 main">
-                <img src="../myproject/assets/img/a36162a80bbb41e9aa9a460f01328c6a.w_170,h_170,r_k.jpg"  class="img-fluid mb-md-5 shadow  mb-5 bg-body rounded" alt="#">
+                <img src="./a36162a80bbb41e9aa9a460f01328c6a.w_170,h_170,r_k.jpg"  class="img-fluid mb-md-5 shadow  mb-5 bg-body rounded" alt="#">
             </div>
             <div class="col-md-4">
                 <a class="nav-link head" href="#">داده ها /فن اوری</a>
@@ -133,7 +133,7 @@
         </div>
         <div class="row">
             <div class="col-md-3 offset-md-2 main">
-                <img src="../myproject/assets/img/6c6521961f8243758c72dad7ee34abe7.w_170,h_170,r_k.jpg"  class="img-fluid mb-md-5 shadow  mb-5 bg-body rounded" alt="#">
+                <img src="./6c6521961f8243758c72dad7ee34abe7.w_170,h_170,r_k.jpg"  class="img-fluid mb-md-5 shadow  mb-5 bg-body rounded" alt="#">
             </div>
             <div class="col-md-4">
                 <a class="nav-link head" href="#">اموزشی</a>
@@ -149,7 +149,7 @@
              <p>توضیحاتی درباره‌ی پروژه شما. شما می‌توانید با دابل کلیک روی این<br> قسمت متن مورد نظر خودتان را وارد کنید...</p>
          </div>
          <div class="col-md-6">
-             <img src="../myproject/assets/img/9f96c4a4c81c445bb6e45d9917bc053c.w_630,h_530,r_k.jpg" class="img-fluid" alt="#">
+             <img src="./9f96c4a4c81c445bb6e45d9917bc053c.w_630,h_530,r_k.jpg" class="img-fluid" alt="#">
          </div>
      </div>
  </div>
@@ -159,20 +159,20 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="">
                 <div class="carousel-inner">
                   <div class="carousel-item    ">
-                      <img src="../myproject/assets/img/e960b1beca7c49ffbc83105702147e2e.w_630,h_530,r_k.jpg" class="img-fluid d-block w-100" alt="#">
+                      <img src="./e960b1beca7c49ffbc83105702147e2e.w_630,h_530,r_k.jpg" class="img-fluid d-block w-100" alt="#">
                   </div>
                   <div class="carousel-item">
-                    <img src="../myproject/assets/img/9f96c4a4c81c445bb6e45d9917bc053c.w_630,h_530,r_k.jpg" class="d-block w-100" alt="...">
+                    <img src="./9f96c4a4c81c445bb6e45d9917bc053c.w_630,h_530,r_k.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item back item-1 active " style="height: 30.2rem;">
                       <div class="row text-center m-4">
-                          <div class="col-6 text-white data-1 lh-md-lg fs-6 ">
+                          <div class="col-md-6 text-white data-1 lh-lg fs-6 ">
                               <h4>عنوان پروژه</h4>
-                              <p class="text-muted p-1">موسسات آموزشی می توانند بسیار خلاق تر از مدرسه معمولی شما باشند ...</p>
-                              <button type="button" class="btn btn-1 btn-outline-info">ثبت نام</button>
+                              <p class="text-muted">موسسات آموزشی می توانند بسیار خلاق تر از مدرسه معمولی شما باشند ...</p>
+                              <button type="button" class="btn btn-outline-info">ثبت نام</button>
                           </div>
-                          <div class="col-6">
-                              <img src="../myproject/assets/img/a4c72e9c3ec04e25955f09cc1ca9a614.w_170,h_170,r_k.jpg" class="img-fluid" alt="">
+                          <div class="col-md-6">
+                              <img src="./a4c72e9c3ec04e25955f09cc1ca9a614.w_170,h_170,r_k.jpg" class="img-fluid" alt="">
                           </div>
                       </div>
                   </div>
@@ -188,7 +188,7 @@
 
              </div>
         </div>
-        <div class=" col-md-5 main-1">
+        <div class=" col-md-5 ">
             <h3>عنوان پروژه شما</h3>
             <p>توضیحاتی درباره‌ی پروژه شما. شما می‌توانید با دابل کلیک روی این<br> قسمت متن مورد نظر خودتان را وارد کنید...</p>
         </div>
@@ -210,7 +210,7 @@
                  </div>
                 </div>
                 <div class="col-md-6 position-relative dark dan">
-                    <img src="../myproject/assets/img/66833edb00964632bdf159d5e608d725.w_640,h_640,r_k.png" class="img-fluid" alt="#">
+                    <img src="./66833edb00964632bdf159d5e608d725.w_640,h_640,r_k.png" class="img-fluid" alt="#">
                 </div>
              </div>
         </div>
